--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<!-- Principio del widget integrado de Calendly -->
-	<div class="calendly-inline-widget" data-url="https://calendly.com/appkowi/30min?background_color=b2a1ca&text_color=f7f7f7&primary_color=eee847" style="min-width:300px; height:630px;"></div>
+	<div class="calendly-inline-widget" data-url="https://calendly.com/appkowi/30min?background_color=977f91&text_color=eedcbb&primary_color=d0ddd1" style="min-width:300px; height:630px;"></div>
 	<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 	<!-- Final del widget integrado de Calendly -->
 
