--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>-->
 					<div class="clearfix"> </div>
 				</div>
-<div class="contact">
+<!--<div class="contact">
 <div class="container">
 	<div class="ser-top ga-top">
 			<h3>Cont&aacute;ctanos</h3>
@@ -667,7 +667,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>-->
 
-				</div>
+			<!--	</div>
 				<div class="col-md-6 grid-contact-in">
 					<textarea  placeholder=" Mensaje" name="Mensaje"  required></textarea>
 					<input type="submit" value="Send">
