--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<!--<li><a href="#testimonials" class="scroll" data-hover="Gallery">Testimonials</a></li>-->
 						<li><a href="#gallery" class="scroll" data-hover="Gallery">Galer&iacute;a</a></li>
 						<!--<li><a href="#team" class="scroll" data-hover="Codes">Team </a></li>-->
-						<li><a href="#contact" class="scroll" data-hover="Contact">Cont&aacute;ctanos</a></li>
+					<!--	<li><a href="#contact" class="scroll" data-hover="Contact">Cont&aacute;ctanos</a></li>-->
 					  </ul>
 					  <div class="clearfix"></div>
 					</div>
