--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="glyphicon glyphicon-tint hi-icon "> </i>
 					</div>
 					<h3>Armon&iacutea completa</h3>
-										<p>Nuestro plan mas completo. Incluye 5 sesiones de videoconferencia al mes + mensajes de texto ilimitados por tan solo $300.000</p>
+										<p>Nuestro plan mas completo. Incluye 5 sesiones de videoconferencia al mes + mensajes de texto ilimitados.</p>
 
 				</div>
 				<div class="col-md-6 ser-grid ">
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<h3>Resguardo y armon&iacutea</h3>
-					<p>Este es nuestro plan de sesiones individuales de videoconferencia. Estas tienen un costo de $70.000</p>
+					<p>Este es nuestro plan de sesiones individuales de videoconferencia.</p>
 				</div>
 				<div class="col-md-6 ser-grid ">
 					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
