--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="service-head">
 			<div class="col-md-5 ser-head">
 
-						<h5>En esta cuarentena estamos aqu&iacute para ti  </h5>
+						<h5>En esta cuarentena estamos aqu&iacute para ti</h5>
 								<img src="images/teaser1.png" class="img-responsive" alt="">
-								<p>Agenda tus primeros 30 minutos con nosotros sin costo</p>
+								<p>Agenda tus primeros 30 minutos gratuitos con nosotros sin ningun compromiso.</p>
 					<!--<ul>
 						<li><i class="glyphicon glyphicon-edit"></i>Masagni dolores eoquie voluptaquisquam estqui dolorem</li>
 						<li><i class="glyphicon glyphicon-edit"></i>Ipsumquia dolor sitamnetase adipiscquam eiuse</li>
@@ -167,32 +167,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
 						<i class="glyphicon glyphicon-tint hi-icon "> </i>
 					</div>
-					<h3>Armon&iacutea completa</h3>
-										<p>Nuestro plan mas completo. Incluye 5 sesiones de videoconferencia al mes + mensajes de texto ilimitados.</p>
+					<h3>Plan Armon&iacutea completa</h3>
+										<p>Nuestro plan mas completo. Incluye 5 sesiones de videoconferencia al mes + mensajes de texto ilimitados con tu terapeuta.</p> <p> Precio: $270.000</p>
 
 				</div>
 				<div class="col-md-6 ser-grid ">
 					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
 						<i class="glyphicon glyphicon-leaf hi-icon "> </i>
 					</div>
-					<h3>Mamo</h3>
-										<p>El plan intermedio. En este plan cuentas con 4 sesiones de videoconferencia al mes + mensajes de texto un d&iacutea a la semana.</p>
+					<h3>Plan Mamo</h3>
+										<p>El plan intermedio. En este plan cuentas con 4 sesiones de videoconferencia al mes + mensajes de texto una vez a la semana con tu terapeuta.</p> <p> Precio: $200.000</p>
 
-				</div>
-				<div class="col-md-6 ser-grid ">
-					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
-						<i class="glyphicon glyphicon-user hi-icon "> </i>
-					</div>
-
-					<h3>Resguardo y armon&iacutea</h3>
-					<p>Este es nuestro plan de sesiones individuales de videoconferencia.</p>
 				</div>
 				<div class="col-md-6 ser-grid ">
 					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
 						<i class="glyphicon glyphicon-heart-empty hi-icon"> </i>
 					</div>
-					<h3>Cuarentena</h3>
-					<p>Como nos encontramos en cuarentena queremos ayudarte en estas &eacutepocas. Agenda tu cita de 30 minutos de forma totalmente gratuita. </p>
+
+					<h3>Plan Sierra</h3>
+					<p>Nuestro plan mas b&aacutesico. Incluye 3 sesiones de videoconferencia al mes con tu terapeuta.</p><p>Precio: $150.000</p>
+				</div>
+				<div class="col-md-6 ser-grid ">
+					<div class=" hi-icon-effect-7 hi-icon-effect-7a">
+						<i class="glyphicon glyphicon-user hi-icon"> </i>
+					</div>
+					<h3>Resguardo y armon&iacutea</h3>
+					<p>Este es nuestro plan de sesiones individuales de videoconferencia.</p><p>Precio: $70.000</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
