--- a/index.html
+++ b/index.html
@@ -379,48 +379,48 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</figure>
 				</a>
 
-            <!--    </div>
+              </div>
                 <div class="  filtr-item" data-category="1, 5" data-sort="City lights">
-                   <a href="images/ga6.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                   <a href="images/quote7.png" rel="title" class="b-link-stripe b-animate-go  thickbox">
 
 					<figure>
-					 <img src="images/ga6.jpg" class="img-responsive" alt=" " />	<figcaption>
-							<h3>Prevailing</h3>
+					 <img src="images/quote7.png" class="img-responsive" alt=" " />	<figcaption>
+						<!--	<h3>Prevailing</h3>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua.
 							</p>
-						</figcaption>
+						</figcaption> -->
 					</figure>
 				</a>
 
                 </div>
                 <div class=" filtr-item" data-category="2, 4" data-sort="Dreamhouse">
-                   <a href="images/ga7.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                   <a href="images/quote8.png" rel="title" class="b-link-stripe b-animate-go  thickbox">
 
 					<figure>
-					 <img src="images/ga7.jpg" class="img-responsive" alt=" " />	<figcaption>
-							<h3>Prevailing</h3>
+					 <img src="images/quote8.png" class="img-responsive" alt=" " />	<figcaption>
+							<!--<h3>Prevailing</h3>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua.
 							</p>
-						</figcaption>
+						</figcaption>-->
 					</figure>
 				</a>
 
                 </div>
 				<div class=" filtr-item" data-category="2, 4" data-sort="Dreamhouse">
-                  <a href="images/ga8.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                  <a href="images/quote9.png" rel="title" class="b-link-stripe b-animate-go  thickbox">
 
 					<figure>
-					 <img src="images/ga8.jpg" class="img-responsive" alt=" " />	<figcaption>
-							<h3>Prevailing</h3>
+					 <img src="images/quote9.png" class="img-responsive" alt=" " />	<figcaption>
+							<!--<h3>Prevailing</h3>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua.
 							</p>
-						</figcaption>
+						</figcaption>-->
 					</figure>
 				</a>
 
